<resources>
    <string name="app_name">puctime</string>
    <string name="login_button_text">ENTRAR</string>
    <string name="register_button_text">CADASTRAR</string>
    <string name="name_hint">Nome</string>
    <string name="worker_id_hint">N° Matrícula</string>
    <string name="email_hint">E-mail</string>
    <string name="passwd_hint">Senha</string>
    <string name="already_registered_text">Já tem um cadastro? Entre aqui</string>
    <string name="is_not_registered_yet_text">Não tem uma conta? Clique aqui para se registrar</string>
    <string name="logo_description">Logo do aplicativo,
        com PUC escrito grande e um relógio no lugar do C.
        Abaixo disso, há a palavra campinas escrito e
        também pontifícia universidade católica com letras menores.
    </string>
    <string name="forgot_password_text">Esqueci minha senha</string>
    <string name="forgot_passwd_desc_text">Providencie o e-mail da conta que deseja alterar a senha </string>
    <string name="reset_passwd_button_text">RESETAR SENHA</string>
    <string name="back_text">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Snap time picker -->
    <string name="title">Please select the time</string>
    <string name="selected_time_prefix">Your selected time is</string>
    <!-- %1$s:%2$s will add the string in HH:MM format
    for more understanding follow the link at the end -->
    <string name="selected_time_format">%1$s:%2$s</string>

    <!-- AutoCompleteTextView Dias da Semana -->

    <string-array name="week_days">
        <item>Segunda-feira</item>
        <item>Terça-feira</item>
        <item>Quarta-feira</item>
        <item>Quinta-feira</item>
        <item>Sexta-feira</item>
        <item>Sábado</item>
    </string-array>

    <!-- Notificação -->
    <string name="channel_name">principal</string>
    <string name="channel_description">canal de testes</string>


</resources>