<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".access.LoginActivity">

    <ImageView
        android:id="@+id/lock_icon"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock_icon" />

    <TextView
        android:id="@+id/forgot_passwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password_text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lock_icon" />

    <TextView
        android:id="@+id/forgot_passwd_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_passwd_title"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forgot_passwd_desc_text"
        android:textAlignment="center"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email_forgot_passwd_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_passwd_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_email_forgot_passwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button_forgot_passwd_layout"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="40dp"
        app:cornerRadius="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/reset_passwd_button_text"
        android:textSize="20sp"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_forgot_passwd_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/back_text"
        android:textSize="20sp"
        app:backgroundTint="@color/darker_yellow"
        app:cornerRadius="15dp"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconPadding="10dp"
        app:iconGravity="textStart"
        app:iconSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_button_forgot_passwd_layout" />




</androidx.constraintlayout.widget.ConstraintLayout>